--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
         <div id = "header">
             
-            <button type = "button" class = "button"> Button 1 </button>
+            <button type = "button" class = "button">Home</button>
 
-            <button type = "button" class = "button"> Button 2 </button>
+            <button type = "button" class = "button">About</button>
 
-            <button type = "button" class = "button"> Button 3 </button>
+            <button type = "button" class = "button">Photography</button>
 
-            <button type = "button" class = "button"> Button 4 </button>
+            <button type = "button" class = "button">Legal Disclaimer</button>
 
         </div>
 
