--- a/index.html
+++ b/index.html
@@ -23,14 +23,20 @@
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
             <div class = "content">
-                <div class = "content-header">
+                <div class = "center-text">
                     <h1>Welcome!</h1>
                     <h3>Here you will learn an assortment of amazing factoids and emelishments about Kyle.</h3>
                 </div>
                 <div class = "content-main">  
-                    <div class = "content-box"></div>
-                    <div class = "content-box"></div>
-                    <div class = "content-box"></div>                  
+                    <div class = "content-box">
+                        <p class = "center-text"> Box Left</p>
+                    </div>
+                    <div class = "content-box">
+                        <p class = "center-text"> Box Center</p>
+                    </div>
+                    <div class = "content-box">
+                        <p class = "center-text"> Box Right</p>
+                    </div>                  
                 </div>
             </div>            
             <div class = "side-panel"></div>  
