started about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kyle's Profile</title>
+    <title>Kyle's Profile: About</title>
     <link rel = "stylesheet" href = "stylish.css">
 </head>
 <body>
@@ -23,9 +23,7 @@
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
             <div class = "content">
-                <div class = "center-text">
-                    <h1>Welcome!</h1>
-                    <h3>Here you will learn an assortment of amazing factoids and emelishments about Kyle.</h3>
+                <div class = "center-text">              
                 </div>
                 <div class = "content-main">  
                     <div class = "content-box">
