new page and URLs

--- a/template.html
+++ b/template.html
@@ -10,15 +10,16 @@
 <body>
     <div class =  "layout-container">
 
-        <div class = "header">
-            
+        <div class = "header">           
             <button type = "button">
-                <a href ="https://mortalamonggods.github.io/">
-                    Home
+                <a href ="https://mortalamonggods.github.io/">Home
                 </a></button>
-            <button type = "button">About</button>
-            <button type = "button">Photography</button>
-            <button type = "button">Legal Disclaimer</button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About
+                </a></button>  
+            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">Photography
+            </a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">Legal Disclaimer
+            </a></button>
         </div>
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
