--- a/photos.html
+++ b/photos.html
@@ -10,26 +10,21 @@
 <body>
     <div class =  "layout-container">
 
-        <div class = "header">            
+        <div class = "header">           
             <button type = "button">
                 <a href ="https://mortalamonggods.github.io/">Home
                 </a></button>
-            <button type = "button">
-                <a href ="https://mortalamonggods.github.io/aboutme.html">About
+            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About
                 </a></button>  
-            <button type = "button">
-                <a href ="https://mortalamonggods.github.io/aboutme.html">Photography
+            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">Photography
             </a></button>
-            <button type = "button">
-                <a href ="https://mortalamonggods.github.io/aboutme.html">Legal Disclaimer
-                </a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">Legal Disclaimer
+            </a></button>
         </div>
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
             <div class = "content">
-                <div class = "center-text">
-                    <h1>Welcome!</h1>
-                    <h3>Here you will learn an assortment of amazing factoids and emelishments about Kyle.</h3>
+                <div class = "center-text">              
                 </div>
                 <div class = "content-main">  
                     <div class = "content-box">
