page URL updates

--- a/aboutme.html
+++ b/aboutme.html
@@ -15,9 +15,9 @@
                 </a></button>
             <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About
                 </a></button>  
-            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">Photography
+            <button type = "button"><a href ="https://mortalamonggods.github.io/photos.html">Photography
             </a></button>
-            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">Legal Disclaimer
+            <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal Disclaimer
             </a></button>
         </div>
         <div class = "mid-section">            
