--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
             <button type = "button">
                 <a href ="https://mortalamonggods.github.io/">Home
                 </a></button>
-            <button type = "button">
-                <a href ="https://mortalamonggods.github.io/aboutme.html">About
+            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About
                 </a></button>  
-            <button type = "button">
-                <a href ="https://mortalamonggods.github.io/aboutme.html">Photography
+            <button type = "button"><a href ="https://mortalamonggods.github.io/photos.html">Photography
             </a></button>
-            <button type = "button">
-                <a href ="https://mortalamonggods.github.io/aboutme.html">Legal Disclaimer
-                </a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal Disclaimer
+            </a></button>
         </div>
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
