--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 </div>
                 <div class = "content-main">  
                     <div class = "content-box">
-                        <p class = "center-text">Main Highlight One</p>
+                        <p class = "center-text">                        
+                        <img src = "https://lh3.googleusercontent.com/KKaOGhUuBNy0CoApiq-k_WxrispuAiK5ZiC2tHNUxgTB_CzQAMNd1KCkDJVm37GfilFx0a01TOt8hX9vqLNhZP5QSSisCzp8_FrWj010nzyQsmoQAYTUK6QJvITEWOEFial9MaGbk-RJvQYmWR2f1j8yJXeWI4xLE-4g1b0yaMNdoqSZSyXzz1Jhhz9nkUWU-W9KJdN0Z8kJUSesWC0AgTDofCUBBlBCiN4oIRCxOPj0_5-mON8enCRNmdKdsfJ5ztrxbcGRGT0t4ZtW3oTx552XGVNsSBsVivdrHYpY4_0lxIyIiiN-dCqBL1Soy6iIYlC_TLzVk0LHnYmgdvb2iGeUDBhD4eiug74ddyLFXR_BTLsKZK7flHd0xwvjGr845cBdD4_W5y0dIDh34bLdIRiKZXft79xtVtkwPY8B3NnzoI2oe39UD80vd2dsPKLbMUFV7iXc7rL5l-D9Ju30tIV0q7CrEPU9SZmmdwiXLQNFiCk4G16cQg1qHQnfHYajqqgrKsTGKR78NWES4Jcc1uF4oXzfUbxRE4trrKmz9siRXKUYJ03fFiPF70m2aZIe5anJfIX2ns2fo5XuNFQsa8pidZM_DaGZV-mppgAnJ_ufNUKyIaNt5gxNYAyzAucrOjGuB3Vo1tvVt6GdWAAPm92_FTUCX_i4Sr__2lmeaByNi7bonDJS4g7wnRf6reWiXZ0sbAkYoQ0UqnJtbhKBMPs=w1204-h903-no?authuser=0" alt = "Kyle and Skye">
+                        </p>
                     </div>
                     <div class = "content-box">
                         <p class = "center-text">Main Highlight Two</p>
