--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                         <h2 class = "center-text">Fast Animal Photos</h2>
                         <div id = "sk">           
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/Kyle&Skye.jpg?raw=true"
-                            alt = "Kyle and Skye" id = "Kyle-Skye">
+                                 alt = "Kyle and Skye" class = "left-photos">
+                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/cisco_sitting.jpg?raw=true"
+                                 alt = "Cisco Sitting On People" class = "left-photos">
                         </div>
                     </div>
                     <div class = "content-box">
