more added to about me. working the layout

--- a/aboutme.html
+++ b/aboutme.html
@@ -23,17 +23,41 @@
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
             <div class = "content">
-                <div class = "center-text">              
+                <div class = "containers"> 
+                    <h2>What About Me?</h2>             
                 </div>
                 <div class = "content-main">  
                     <div class = "content-box">
-                        <p class = "center-text">Main Highlight One</p>
+                        <h3 class = "containers">Life Highlights</h3>
+                        <div id = "timeline">
+                            <p>In my early years I did a variety of things like A, B, C, or even D!</p>
+                            <p>Something something being super cool in High School</p>
+                            <p>I think I joined the Military?</p>
+                            <p>Something simple about being the in the Marines</p>
+                            <p>Living in Arizona</p>
+                            <p>Moving Home</p>
+                            <p>Got Married</p>
+                            <p>Bought A House</p>
+                            <p>Acquired So Many Animals (give number)</p>
+                            <p>Finally Graduated College</p>
+                            <p>A New Career?</p>
+                        </div>
                     </div>
                     <div class = "content-box">
-                        <p class = "center-text">Main Highlight Two</p>
+                        <h3 class = "containers">My Passions</h3>
+                        <div id = "passions">
+                            <p>New found passion for coding and creating</p>
+                            <p>Spending time with my animals (and my wife...)</p>
+                            <p>Playing video games with my friends</p>
+                            <p>I should think of some other things to put here</p>
+                        </div>
                     </div>
                     <div class = "content-box">
-                        <p class = "center-text">Main Highlight Three</p>
+                        <h3 class = "containers">So Who Am I?</h3>
+                        <div id = "imme">
+                            <p>I am me and trying to improve everyday</p>
+                            <img src = "none.com" alt = "a motivational photo from the 90's">
+                        </div>
                     </div>                  
                 </div>
             </div>            
