--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
             <div class = "content">
-                <div class = "center-text">
+                <div class = "containers">
                     <h1>Welcome!</h1>
                     <h3>Here you will learn an assortment of amazing factoids and emelishments about Kyle.</h3>
                 </div>
                 <div class = "content-main">  
                     <div class = "content-box">
-                        <h2 class = "center-text">Fast Animal Photos</h2>
+                        <h3 class = "containers">Fast Animal Photos</h3>
                         <div id = "sk">           
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/Kyle&Skye.jpg?raw=true"
                                  alt = "Kyle and Skye" class = "left-photos">
@@ -39,10 +39,10 @@
                         </div>
                     </div>
                     <div class = "content-box">
-                        <p class = "center-text">Main Highlight Two</p>
+                        <p class = "containers">Main Highlight Two</p>
                     </div>
                     <div class = "content-box">
-                        <p class = "center-text">Main Highlight Three</p>
+                        <p class = "containers">Main Highlight Three</p>
                     </div>                  
                 </div>
             </div>            
