--- a/photos.html
+++ b/photos.html
@@ -24,17 +24,17 @@
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
             <div class = "content">
-                <div class = "center-text">              
+                <div class = "containers">              
                 </div>
                 <div class = "content-main">  
                     <div class = "content-box">
-                        <p class = "center-text">Main Highlight One</p>
+                        <p class = "containers">Main Highlight One</p>
                     </div>
                     <div class = "content-box">
-                        <p class = "center-text">Main Highlight Two</p>
+                        <p class = "containers">Main Highlight Two</p>
                     </div>
                     <div class = "content-box">
-                        <p class = "center-text">Main Highlight Three</p>
+                        <p class = "containers">Main Highlight Three</p>
                     </div>                  
                 </div>
             </div>            
