--- a/aboutme.html
+++ b/aboutme.html
@@ -54,9 +54,10 @@
                     </div>
                     <div class = "content-box">
                         <h3 class = "containers">So Who Am I?</h3>
-                        <div id = "imme">
+                        <div id = "sk">
                             <p>I am me and trying to improve everyday</p>
-                            <img src = "none.com" alt = "a motivational photo from the 90's">
+                            <img src = "https://media.giphy.com/media/SzweYQGpsXhocXuoOI/giphy.gif" alt = "a motivational photo from the 90's"
+                                id = "motivation">
                         </div>
                     </div>                  
                 </div>
