right about me image done

--- a/aboutme.html
+++ b/aboutme.html
@@ -56,8 +56,8 @@
                         <h3 class = "containers">So Who Am I?</h3>
                         <div id = "sk">
                             <p>I am me and trying to improve everyday</p>
-                            <img src = "https://media.giphy.com/media/SzweYQGpsXhocXuoOI/giphy.gif" alt = "a motivational photo from the 90's"
-                                id = "motivation">
+                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/motivation.jpeg?raw=true" 
+                                 alt = "a motivational photo from the 90's" class = "left-photos">
                         </div>
                     </div>                  
                 </div>
