--- a/aboutme.html
+++ b/aboutme.html
@@ -15,8 +15,8 @@
                 </a></button>
             <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About
                 </a></button>  
-            <button type = "button"><a href ="https://mortalamonggods.github.io/photos.html">Photography
-            </a></button>
+                <button type = "button"><a href ="https://mortalamonggods.github.io/portfolio.html">Portfolio
+                </a></button>
             <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal Disclaimer
             </a></button>
         </div>
