--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kyle's Profile</title>
+    <title>Kyle's Profile: Portfolio</title>
     <link rel = "stylesheet" href = "stylish.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
                 </a></button>
             <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About
                 </a></button>  
-            <button type = "button"><a href ="https://mortalamonggods.github.io/photos.html">Photography
+            <button type = "button"><a href ="https://mortalamonggods.github.io/portfolio.html">Portfolio
             </a></button>
             <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal Disclaimer
             </a></button>
