added bottom button

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class =  "layout-container">
-        <div class = "header">
+        <div class = "header-footer">
             <button type = "button">
                 <a href ="https://mortalamonggods.github.io/">Home
                 </a></button>
@@ -64,7 +64,7 @@
             </div>            
             <div class = "side-panel"></div>  
         </div>
-        <div class = "header"></div>
+        <div class = "header-footer"></div>
     </div>
 </body>
 </html>
