--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class =  "layout-container">
 
-        <div class = "header">            
+        <div class = "header-footer">            
             <button type = "button">
                 <a href ="https://mortalamonggods.github.io/">Home
                 </a></button>
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                     <div class = "content-box">
-                        <p class = "containers">Main Highlight Two</p>
+                        <p class = "containers">Fast Dev Projects<p>
                     </div>
                     <div class = "content-box">
                         <p class = "containers">Main Highlight Three</p>
@@ -48,7 +48,16 @@
             </div>            
             <div class = "side-panel"></div>  
         </div>
-        <div class = "header"></div>
+        <div class = "header-footer">
+            <div>
+                <button type = "button"><a href ="https://github.com/MortalAmongGods" >Github
+                </a></button>
+            </div>
+            <div>
+                <button type = "button"><a href ="https://www.linkedin.com/in/mcintoshkyle2022/">Linked In
+                </a></button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
