added images for portfolio

--- a/index.html
+++ b/index.html
@@ -39,24 +39,20 @@
                         </div>
                     </div>
                     <div class = "content-box">
-                        <p class = "containers">Fast Dev Projects<p>
+                        <h3 class = "containers">Fast Dev Projects</h3>
                     </div>
                     <div class = "content-box">
-                        <p class = "containers">Main Highlight Three</p>
+                        <h3 class = "containers">Main Highlight Three</h3>
                     </div>                  
                 </div>
             </div>            
             <div class = "side-panel"></div>  
         </div>
         <div class = "header-footer">
-            <div>
-                <button type = "button"><a href ="https://github.com/MortalAmongGods" >Github
-                </a></button>
-            </div>
-            <div>
-                <button type = "button"><a href ="https://www.linkedin.com/in/mcintoshkyle2022/">Linked In
-                </a></button>
-            </div>
+            <button type = "button"><a href ="https://github.com/MortalAmongGods" >Github
+            </a></button>
+            <button type = "button"><a href ="https://www.linkedin.com/in/mcintoshkyle2022/">Linked In
+            </a></button>
         </div>
     </div>
 </body>
