--- a/legal.html
+++ b/legal.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kyle's Profile</title>
+    <title>Kyle's Profile: Legal</title>
     <link rel = "stylesheet" href = "stylish.css">
 </head>
 <body>
     <div class =  "layout-container">
 
-        <div class = "header-footer">           
+        <div class = "header-footer">            
             <button type = "button">
                 <a href ="https://mortalamonggods.github.io/">Home
                 </a></button>
@@ -24,14 +24,15 @@
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
             <div class = "content">
-                <div class = "containers">              
+                <div class = "containers">   
+                    <h2>The Fine Legal Print</h2>          
                 </div>
                 <div class = "content-main">  
                     <div class = "content-box">
                         <p class = "containers">Main Highlight One</p>
                     </div>
-                    <div class = "content-box">
-                        <p class = "containers">Main Highlight Two</p>
+                    <div class = "content-box" id = "legal">                       
+                        <p></p>Ask a lawyer...</p>
                     </div>
                     <div class = "content-box">
                         <p class = "containers">Main Highlight Three</p>
@@ -40,7 +41,12 @@
             </div>            
             <div class = "side-panel"></div>  
         </div>
-        <div class = "header-footer"></div>
+        <div class = "header-footer">
+            <button type = "button"><a href ="https://github.com/MortalAmongGods" >Github
+            </a></button>
+            <button type = "button"><a href ="https://www.linkedin.com/in/mcintoshkyle2022/">Linked In
+            </a></button>
+        </div>
     </div>
 </body>
 </html>
