--- a/portfolio.html
+++ b/portfolio.html
@@ -10,37 +10,43 @@
 <body>
     <div class =  "layout-container">
 
-        <div class = "header-footer">           
+        <div class = "header-footer">            
             <button type = "button">
                 <a href ="https://mortalamonggods.github.io/">Home
                 </a></button>
             <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About
                 </a></button>  
-            <button type = "button"><a href ="https://mortalamonggods.github.io/portfolio.html">Portfolio
-            </a></button>
+                <button type = "button"><a href ="https://mortalamonggods.github.io/portfolio.html">Portfolio
+                </a></button>
             <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal Disclaimer
             </a></button>
         </div>
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
             <div class = "content">
-                <div class = "containers">              
+                <div class = "containers">  
+                    <h2>This Is My Portfolio</h2>               
                 </div>
                 <div class = "content-main">  
                     <div class = "content-box">
-                        <p class = "containers">Main Highlight One</p>
+                        <h3 class = "containers">Group Mid-Term</h3>
                     </div>
                     <div class = "content-box">
-                        <p class = "containers">Main Highlight Two</p>
+                        <h3 class = "containers">Unity Learnings</h3>
                     </div>
                     <div class = "content-box">
-                        <p class = "containers">Main Highlight Three</p>
+                        <h3 class = "containers">This Project</h3>
                     </div>                  
                 </div>
             </div>            
             <div class = "side-panel"></div>  
         </div>
-        <div class = "header-footer"></div>
+        <div class = "header-footer">
+            <button type = "button"><a href ="https://github.com/MortalAmongGods" >Github
+            </a></button>
+            <button type = "button"><a href ="https://www.linkedin.com/in/mcintoshkyle2022/">Linked In
+            </a></button>
+        </div>
     </div>
 </body>
 </html>
