--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class =  "layout-container">
-        <div class = "header-footer">
+        <div class = "header-footer">            
             <button type = "button">
                 <a href ="https://mortalamonggods.github.io/">Home
                 </a></button>
@@ -64,7 +64,12 @@
             </div>            
             <div class = "side-panel"></div>  
         </div>
-        <div class = "header-footer"></div>
+        <div class = "header-footer">
+            <button type = "button"><a href ="https://github.com/MortalAmongGods" >Github
+            </a></button>
+            <button type = "button"><a href ="https://www.linkedin.com/in/mcintoshkyle2022/">Linked In
+            </a></button>
+        </div>
     </div>
 </body>
 </html>
