about me updates

--- a/aboutme.html
+++ b/aboutme.html
@@ -29,35 +29,37 @@
                 <div class = "content-main">  
                     <div class = "content-box">
                         <h3 class = "containers">Life Highlights</h3>
-                        <div id = "timeline">
-                            <p>In my early years I did a variety of things like A, B, C, or even D!</p>
-                            <p>Something something being super cool in High School</p>
-                            <p>I think I joined the Military?</p>
-                            <p>Something simple about being the in the Marines</p>
-                            <p>Living in Arizona</p>
-                            <p>Moving Home</p>
-                            <p>Got Married</p>
-                            <p>Bought A House</p>
-                            <p>Acquired So Many Animals (give number)</p>
-                            <p>Finally Graduated College</p>
-                            <p>A New Career?</p>
+                        <div class = "aboutme">
+                            <p> 
+                            I grew up in Royal Oak, Michigan to four loving parents. I am the eldest of four total kids between the two families.
+                            <br></br>
+                            Once I graduate highschool, I joined the Marines Corps and was honorably discharged in 2012 after 4.5 years with 3rd Battalion, 5th Marines (3/5). After transistioning out, 
+                            I lived in Arizona for a few years and then moved back home with my family. While living with my parents, My loving wife and I met on...Tinder.
+                            <br></br>
+                            We were engage ontop of Edinburgh Castle, Scotland and got marred 2 years later. We now have six cats and a dog in our house in Troy, Michigan.
+                            </p>
                         </div>
                     </div>
                     <div class = "content-box">
-                        <h3 class = "containers">My Passions</h3>
-                        <div id = "passions">
-                            <p>New found passion for coding and creating</p>
-                            <p>Spending time with my animals (and my wife...)</p>
-                            <p>Playing video games with my friends</p>
-                            <p>I should think of some other things to put here</p>
+                        <h3 class = "containers">My Hobbies</h3>
+                        <div class = "aboutme">
+                            <p>
+                                <ul id = "hobbielist">
+                                    <li>Haning out around the house</li>
+                                    <li>Playing video games with my friends</li>
+                                    <li>Coding?</li>
+                                    <li>Thinking about hobbies I should get into</li>
+                                </ul>
+                            </p>                          
                         </div>
                     </div>
                     <div class = "content-box">
                         <h3 class = "containers">So Who Am I?</h3>
-                        <div id = "sk">
+                        <div class = "sk">
                             <p>I am me and trying to improve everyday</p>
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/motivation.jpeg?raw=true" 
                                  alt = "a motivational photo from the 90's" class = "left-photos">
+                            <p>Is the cliche part?</p>
                         </div>
                     </div>                  
                 </div>
