--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class = "content-main">  
                     <div class = "content-box">
                         <h3 class = "containers">Fast Animal Photos</h3>
-                        <div id = "sk">           
+                        <div class = "sk">           
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/Kyle&Skye.jpg?raw=true"
                                  alt = "Kyle and Skye" class = "left-photos">
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/cisco_sitting.jpg?raw=true"
