--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,24 @@
                 <div class = "content-main">  
                     <div class = "content-box">
                         <h3 class = "containers">Group Mid-Term</h3>
+                        <div class = "sk">
+                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/unity.JPG?raw=true" 
+                                 alt = "a motivational photo from the 90's" class = "left-photos">                                  
+                        </div>
                     </div>
                     <div class = "content-box">
                         <h3 class = "containers">Unity Learnings</h3>
+                        <div class = "sk">
+                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/unity.JPG?raw=true" 
+                                 alt = "a motivational photo from the 90's" class = "left-photos">                                  
+                        </div>
                     </div>
                     <div class = "content-box">
                         <h3 class = "containers">This Project</h3>
+                        <div class = "sk">
+                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/ThisProjectCode.JPG?raw=true" 
+                                 alt = "a motivational photo from the 90's" class = "left-photos">                                  
+                        </div>
                     </div>                  
                 </div>
             </div>            
