--- a/legal.html
+++ b/legal.html
@@ -25,18 +25,12 @@
             <div class = "side-panel" ></div>            
             <div class = "content">
                 <div class = "containers">   
-                    <h2>The Fine Legal Print</h2>          
+                    <h1>The Fine Legal Print</h1>          
                 </div>
                 <div class = "content-main">  
-                    <div class = "content-box">
-                        <p class = "containers">Main Highlight One</p>
-                    </div>
                     <div class = "content-box" id = "legal">                       
-                        <p></p>Ask a lawyer...</p>
-                    </div>
-                    <div class = "content-box">
-                        <p class = "containers">Main Highlight Three</p>
-                    </div>                  
+                        <h2>Ask a lawyer...</h2>
+                    </div>                
                 </div>
             </div>            
             <div class = "side-panel"></div>  
