--- a/aboutme.html
+++ b/aboutme.html
@@ -31,11 +31,9 @@
                         <h3 class = "containers">Life Highlights</h3>
                         <div class = "aboutme">
                             <p> 
-                            I grew up in Royal Oak, Michigan to four loving parents. I am the eldest of four total kids between the two families.
-                            <br></br>
+                            I grew up in Royal Oak, Michigan to four loving parents. I am the eldest of four total kids between the two families.<br></br>                            
                             Once I graduate highschool, I joined the Marines Corps and was honorably discharged in 2012 after 4.5 years with 3rd Battalion, 5th Marines (3/5). After transistioning out, 
-                            I lived in Arizona for a few years and then moved back home with my family. While living with my parents, My loving wife and I met on...Tinder.
-                            <br></br>
+                            I lived in Arizona for a few years and then moved back home with my family. While living with my parents, My loving wife and I met on...Tinder.<br></br>                        
                             We were engage ontop of Edinburgh Castle, Scotland and got marred 2 years later. We now have six cats and a dog in our house in Troy, Michigan.
                             </p>
                         </div>
@@ -60,6 +58,7 @@
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/motivation.jpeg?raw=true" 
                                  alt = "a motivational photo from the 90's" class = "left-photos">
                             <p>Is the cliche part?</p>
+                            <p class = "aboutme">If you wish to contact me, please visit my LinkedIn profile.</p>
                         </div>
                     </div>                  
                 </div>
