more images and formating

--- a/aboutme.html
+++ b/aboutme.html
@@ -58,7 +58,8 @@
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/motivation.jpeg?raw=true" 
                                  alt = "a motivational photo from the 90's" class = "left-photos">
                             <p>Is the cliche part?</p>
-                            <p class = "aboutme">If you wish to contact me, please visit my LinkedIn profile.</p>
+                            <p class = "aboutme">If you wish to contact me, please visit my <a href ="https://www.linkedin.com/in/mcintoshkyle2022/">LinkedIn profile</a>
+                            or <a href = "mailto:krmcintosh87@gmail.com"> email me.</a></p>
                         </div>
                     </div>                  
                 </div>
@@ -66,7 +67,7 @@
             <div class = "side-panel"></div>  
         </div>
         <div class = "header-footer">
-            <button type = "button"><a href ="https://github.com/MortalAmongGods" >Github
+            <button type = "button"><a href ="https://github.com/MortalAmongGods">Github
             </a></button>
             <button type = "button"><a href ="https://www.linkedin.com/in/mcintoshkyle2022/">Linked In
             </a></button>
