--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h1>Welcome!</h1>
                     <h3>Here you will learn an assortment of amazing factoids and emelishments about Kyle.</h3>
                 </div>
-                <div class = "content-main">  
+                <div class = "content-main">                    
                     <div class = "content-box">
                         <h3 class = "containers">Fast Animal Photos</h3>
                         <div class = "sk">           
@@ -40,6 +40,12 @@
                     </div>
                     <div class = "content-box">
                         <h3 class = "containers">Fast Dev Projects</h3>
+                        <div class = "sk">           
+                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/unity.JPG?raw=true" 
+                                 alt = "The Mid-Term" class = "left-photos"> 
+                                 <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/unity.JPG?raw=true" 
+                                 alt = "Unity Tutorial" class = "left-photos"> 
+                        </div>
                     </div>
                     <div class = "content-box">
                         <h3 class = "containers">Main Highlight Three</h3>
