showing vs code version control

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,15 +10,10 @@
 <body>
     <div class =  "layout-container">
         <div class = "header-footer">            
-            <button type = "button">
-                <a href ="https://mortalamonggods.github.io/">Home
-                </a></button>
-            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About
-                </a></button>  
-                <button type = "button"><a href ="https://mortalamonggods.github.io/portfolio.html">Portfolio
-                </a></button>
-            <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal Disclaimer
-            </a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/">Home</a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About</a></button>  
+            <button type = "button"><a href ="https://mortalamonggods.github.io/portfolio.html">Portfolio</a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal</a></button>
         </div>
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
@@ -56,7 +51,7 @@
                         <div class = "sk">
                             <p>I am me and trying to improve everyday</p>
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/motivation.jpeg?raw=true" 
-                                 alt = "a motivational photo from the 90's" class = "left-photos">
+                                 alt = "a motivational photo from the 90's" class = "pictures">
                             <p>Is the cliche part?</p>
                             <p class = "aboutme">If you wish to contact me, please visit my <a href ="https://www.linkedin.com/in/mcintoshkyle2022/">LinkedIn profile</a>
                             or <a href = "mailto:krmcintosh87@gmail.com"> email me.</a></p>
