--- a/index.html
+++ b/index.html
@@ -9,17 +9,11 @@
 </head>
 <body>
     <div class =  "layout-container">
-
         <div class = "header-footer">            
-            <button type = "button">
-                <a href ="https://mortalamonggods.github.io/">Home
-                </a></button>
-            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About
-                </a></button>  
-                <button type = "button"><a href ="https://mortalamonggods.github.io/portfolio.html">Portfolio
-                </a></button>
-            <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal Disclaimer
-            </a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/">Home</a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About</a></button>  
+            <button type = "button"><a href ="https://mortalamonggods.github.io/portfolio.html">Portfolio</a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal</a></button>
         </div>
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
@@ -33,18 +27,20 @@
                         <h3 class = "containers">Fast Animal Photos</h3>
                         <div class = "sk">           
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/Kyle&Skye.jpg?raw=true"
-                                 alt = "Kyle and Skye" class = "left-photos">
+                                 alt = "Kyle and Skye" class = "pictures">
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/cisco_sitting.jpg?raw=true"
-                                 alt = "Cisco Sitting On People" class = "left-photos">
+                                 alt = "Cisco Sitting On People" class = "pictures">
                         </div>
                     </div>
                     <div class = "content-box">
                         <h3 class = "containers">Fast Dev Projects</h3>
-                        <div class = "sk">           
-                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/unity.JPG?raw=true" 
-                                 alt = "The Mid-Term" class = "left-photos"> 
-                                 <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/unity.JPG?raw=true" 
-                                 alt = "Unity Tutorial" class = "left-photos"> 
+                        <div class = "sk"> 
+                            <p>Here are a couple quick snapshots </br> for top two projects.</p>          
+                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/Mid-term.JPG?raw=true" 
+                                 alt = "The Mid-Term" class = "pictures"> 
+                        </br>
+                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/unity_3.JPG?raw=true" 
+                                 alt = "Unity Tutorial" class = "pictures"> 
                         </div>
                     </div>
                     <div class = "content-box">
