--- a/legal.html
+++ b/legal.html
@@ -9,26 +9,20 @@
 </head>
 <body>
     <div class =  "layout-container">
-
         <div class = "header-footer">            
-            <button type = "button">
-                <a href ="https://mortalamonggods.github.io/">Home
-                </a></button>
-            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About
-                </a></button>  
-                <button type = "button"><a href ="https://mortalamonggods.github.io/portfolio.html">Portfolio
-                </a></button>
-            <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal Disclaimer
-            </a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/">Home</a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About</a></button>  
+            <button type = "button"><a href ="https://mortalamonggods.github.io/portfolio.html">Portfolio</a></button>
+            <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal</a></button>
         </div>
         <div class = "mid-section">            
             <div class = "side-panel" ></div>            
             <div class = "content">
                 <div class = "containers">   
-                    <h1>The Fine Legal Print</h1>          
+                    <h1>The Fine Legal Print</h>          
                 </div>
                 <div class = "content-main">  
-                    <div class = "content-box" id = "legal">                       
+                    <div id = "legal">                       
                         <h2>Ask a lawyer...</h2>
                     </div>                
                 </div>
