--- a/portfolio.html
+++ b/portfolio.html
@@ -8,55 +8,50 @@
     <link rel = "stylesheet" href = "stylish.css">
 </head>
 <body>
-    <div class =  "layout-container">
-
-        <div class = "header-footer">            
-            <button type = "button">
-                <a href ="https://mortalamonggods.github.io/">Home
-                </a></button>
-            <button type = "button"><a href ="https://mortalamonggods.github.io/aboutme.html">About
-                </a></button>  
-                <button type = "button"><a href ="https://mortalamonggods.github.io/portfolio.html">Portfolio
-                </a></button>
-            <button type = "button"><a href ="https://mortalamonggods.github.io/legal.html">Legal Disclaimer
-            </a></button>
+    <div class="layout-container">
+        <div class="header-footer">            
+            <button type="button"><a href="https://mortalamonggods.github.io/">Home</a></button>
+            <button type="button"><a href="https://mortalamonggods.github.io/aboutme.html">About</a></button>  
+            <button type="button"><a href="https://mortalamonggods.github.io/portfolio.html">Portfolio</a></button>
+            <button type="button"><a href="https://mortalamonggods.github.io/legal.html">Legal</a></button>
         </div>
-        <div class = "mid-section">            
-            <div class = "side-panel" ></div>            
-            <div class = "content">
-                <div class = "containers">  
+        <div class="mid-section">            
+            <div class="side-panel" ></div>            
+            <div class="content">
+                <div class="containers">  
                     <h2>This Is My Portfolio</h2>               
                 </div>
-                <div class = "content-main">  
-                    <div class = "content-box">
-                        <h3 class = "containers">Group Mid-Term</h3>
-                        <div class = "sk">
-                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/unity.JPG?raw=true" 
-                                 alt = "The Mid-Term" class = "left-photos">                                  
+                <div class="content-main">  
+                    <div class="content-box">
+                        <h3 class="containers"><a href ="https://github.com/bbice91/GC-MidtermProject1">Group Mid-Term</h3></a>
+                        <div class="sk">
+                            <img src="https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/Mid-term.JPG?raw=true" 
+                                 alt="The Mid-Term" class = "pictures">                                
                         </div>
                     </div>
-                    <div class = "content-box">
-                        <h3 class = "containers">Unity Learnings</h3>
-                        <div class = "sk">
-                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/unity.JPG?raw=true" 
-                                 alt = "Unity Tutorial" class = "left-photos">                                  
+                    <div class="content-box">
+                        <h3 class="containers"><a href = "https://play.unity.com/u/MortalAmongGods">Unity Learnings</h3></a>
+                        <div class="sk">
+                            <img src="https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/unity.JPG?raw=true" 
+                                 alt="Unity Tutorial" class = "pictures">                                  
                         </div>
                     </div>
-                    <div class = "content-box">
-                        <h3 class = "containers">This Project</h3>
-                        <div class = "sk">
-                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/ThisProjectCode.JPG?raw=true" 
-                                 alt = "a motivational photo from the 90's" class = "left-photos">                                  
+                    <div class="content-box">
+                        <h3 class="containers"><a href ="https://mortalamonggods.github.io/">This Project</h3></a>
+                        <div class="sk">
+                            <img src="https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/ThisProjectCode.JPG?raw=true" 
+                                 alt="a motivational photo from the 90's" class = "pictures"> 
+                                 <p>Testing text</p>                                 
                         </div>
                     </div>                  
                 </div>
             </div>            
-            <div class = "side-panel"></div>  
+            <div class="side-panel"></div>  
         </div>
-        <div class = "header-footer">
-            <button type = "button"><a href ="https://github.com/MortalAmongGods" >Github
+        <div class="header-footer">
+            <button type="button"><a href="https://github.com/MortalAmongGods" >Github
             </a></button>
-            <button type = "button"><a href ="https://www.linkedin.com/in/mcintoshkyle2022/">Linked In
+            <button type="button"><a href="https://www.linkedin.com/in/mcintoshkyle2022/">Linked In
             </a></button>
         </div>
     </div>
