final for the night

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/Kyle&Skye.jpg?raw=true"
                                  alt = "Kyle and Skye" class = "pictures">
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/cisco_sitting.jpg?raw=true"
-                                 alt = "Cisco Sitting On People" class = "pictures">
+                                 alt = "Cisco Sitting On People" class = "pictures" height = "5rem">
                         </div>
                     </div>
                     <div class = "content-box">
