Messing with index cisco photo

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <div class = "content-main">                    
                     <div class = "content-box">
                         <h3 class = "containers">Fast Animal Photos</h3>
-                        <div class = "sk">           
+                        <div class = "sk">                                   
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/Kyle&Skye.jpg?raw=true"
-                                 alt = "Kyle and Skye" class = "pictures">
+                            alt = "Kyle and Skye" class = "pictures">
                             <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/cisco_sitting.jpg?raw=true"
-                                 alt = "Cisco Sitting On People" class = "pictures" height = "5rem">
+                                 alt = "Cisco Sitting On People" class = "pictures">
                         </div>
                     </div>
                     <div class = "content-box">
