--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,8 @@
                     <div class="content-box">
                         <h3 class="containers"><a href ="https://github.com/bbice91/GC-MidtermProject1">Group Mid-Term</h3></a>
                         <div class="sk">
+                            <p>My first highlighted project is our mid-term. This project drove home the use of git, and completing a console application using S.O.L.I.D.
+                               <br></br> If you would like to visit this repository, please click header of this section.</p> 
                             <img src="https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/Mid-term.JPG?raw=true" 
                                  alt="The Mid-Term" class = "pictures">                                
                         </div>
@@ -32,6 +34,8 @@
                     <div class="content-box">
                         <h3 class="containers"><a href = "https://play.unity.com/u/MortalAmongGods">Unity Learnings</h3></a>
                         <div class="sk">
+                            <p>I have featured on of my unity projects to showcase a growing passion for game development. This is part of Unity's Junior Developer series and is not an original project.
+                                <br></br>If you would like to visit this repository, please click header of this section.</p> 
                             <img src="https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/unity.JPG?raw=true" 
                                  alt="Unity Tutorial" class = "pictures">                                  
                         </div>
@@ -39,9 +43,11 @@
                     <div class="content-box">
                         <h3 class="containers"><a href ="https://mortalamonggods.github.io/">This Project</h3></a>
                         <div class="sk">
+                            <p>This project is this.project and is highlighted as my first front-end specific project. While working through the creation of this website, I learned valuable fundamentals
+                                surrounding CSS and HTML. 
+                                <br></br>If you would like to visit this repository, please click header of this section.</p>                                 
                             <img src="https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/ThisProjectCode.JPG?raw=true" 
                                  alt="a motivational photo from the 90's" class = "pictures"> 
-                                 <p>Testing text</p>                                 
                         </div>
                     </div>                  
                 </div>
